Bug 86886 - TOOLBAR: Shortcut keys not shown in undo and redo tooltips
Summary: TOOLBAR: Shortcut keys not shown in undo and redo tooltips
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-30 23:52 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-11-13 16:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-11-30 23:52:54 UTC
When you mouse over the undo and redo buttons in the standard toolbar, their shortcut keys dont appear in the tooltip.
Comment 1 Jean-Baptiste Faure 2014-12-06 21:24:32 UTC
For me it is a bug, not an enhancement. As far I can see, the issue concerns each program. Set component to UI

Set status to NEW.

Best regards. JBF