tdf#86886 Shortcut keys missing in undo and redo tooltips

Change-Id: I8df003bdad4430a174815ce51197b997717ef379